<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_explore">



    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.netclan.fragment.ExpolreFragment"
        android:label="@string/explore_string"
        tools:layout="@layout/fragment_expolre" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="com.example.netclan.fragment.NetworkFragment"
        android:label="@string/network_string"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.netclan.fragment.ChatsFragment"
        android:label="@string/chat_string"
        tools:layout="@layout/fragment_chats" />


    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.netclan.fragment.ContactsFragment"
        android:label="@string/contacts_string"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.netclan.fragment.GroupsFragment"
        android:label="@string/groups_string"
        tools:layout="@layout/fragment_groups" />

</navigation>